fix :Alignment of hamburger menu in mobile device Increase border-radius of search bar on smaller device (300px) - horizontal scrollbar comes due to navbar smoothen moving effect of image in hero section. reduce gaps and spacing in hero text for mobile devices alignment issue of 'shop our top categories' header. footer icon hover effect - unhovering should translate the icon down with transition

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -69,7 +69,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 12px 25px;
+  padding: 12px 24px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   position: sticky;
   top: 0;
@@ -128,9 +128,8 @@
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 6px;
   transition: color 0.3s ease, transform 0.3s ease;
-  padding: 5px 8px;
+  padding: 5px 4px;
   border-radius: 6px;
   height: 100%;
   justify-content: center;
@@ -205,7 +204,7 @@
     opacity: 0.6;
   }
   100% {
-    transform: translate(-50%, -50%) scale(2);
+    transform: translate(-50%, -50%) scale(1.6);
     opacity: 0;
   }
 }
@@ -420,7 +419,12 @@
   }
 
   .top-center-mobile a {
-    margin-left: 0;
+    margin-left: 10px;
+  }
+
+  .navbar {
+    padding: 0px;
+    margin: 10px;
   }
 
   .logo-section img {
