--- a/src/components/NavbarSearch/NavbarSearch.css
+++ b/src/components/NavbarSearch/NavbarSearch.css
@@ -3,7 +3,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  border-radius: 5px;
+  border-radius: 8px;
   height: 44px;
   border: 1px solid transparent;
   margin: 0 20px;
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   background: var(--muted-bg);
-  border-radius: 5px;
+  border-radius: 8px;
   overflow: hidden;
   border: 1px solid transparent;
 }
@@ -31,7 +31,7 @@
 
 .search-section:has(input:focus-within) {
   border-color: var(--accent-color);
-  border-radius: 5px 5px 0 5px;
+  border-radius: 8px 8px 0 8px;
 }
 
 .search-section select {
@@ -95,9 +95,9 @@
   left: calc(50px + 10px);
   width: calc(100% - 40px - 20px);
   background: #fff;
-  border: 2px solid var(--accent-color);
+  border: 1px solid var(--accent-color);
   border-top: none;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 0 8px 8px;
   padding: 12px;
   font-size: 14px;
   color: #555;
