--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -103,13 +103,13 @@ section {
     transform: translate(0, 0);
   }
   25% {
-    transform: translate(-10px, 0);
+    transform: translate(-3px, 0);
   }
   50% {
-    transform: translate(-10px, -10px);
+    transform: translate(0px, -3px);
   }
   75% {
-    transform: translate(10px, -10px);
+    transform: translate(3px, -3px);
   }
   100% {
     transform: translate(0, 0);
@@ -131,6 +131,10 @@ section {
   }
   .hero-left h2 {
     font-size: 2.5rem;
+    margin-bottom: 10px;
+  }
+  .hero-description p {
+    margin-bottom: 30px;
   }
   .hero-right img {
     max-width: 80%;
