--- a/src/components/shopCategories/shopCategories.css
+++ b/src/components/shopCategories/shopCategories.css
@@ -15,7 +15,7 @@
   font-weight: 700;
   color: #111;
   margin-bottom: 40px;
-  padding: 20px;
+  padding: 20px 20px 20px 0;
   text-align: left;
 }
 
